--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -1408,8 +1409,8 @@ Gw
                                             <rect key="frame" x="10" y="10" width="444" height="49"/>
                                             <subviews>
                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="txT-uz-XI3">
-                                                    <rect key="frame" x="-2" y="32" width="144" height="17"/>
-                                                    <textFieldCell key="cell" lineBreakMode="clipping" title="Personal access token:" id="chk-Bc-jVp">
+                                                    <rect key="frame" x="-2" y="32" width="54" height="17"/>
+                                                    <textFieldCell key="cell" lineBreakMode="clipping" id="chk-Bc-jVp">
                                                         <font key="font" metaFont="system"/>
                                                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
